# ACP

./: .dockerignore  .gitignore  ARCHITECTURE_SIMPLIFIED.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSING.md  MODULAR_BOUNDARIES.md  NOTICE  ONBOARDING.md  OPEN_CORE_MODEL.md  PRODUCT_WALKTHROUGH.md  PUBLIC_REPO_BOUNDARY.md  README.md  ROADMAP.md  SECURITY.md  SINGLE_WORKSPACE_PUBLIC_MODE_PLAN.md  protocol.md
ACP_AGENT/: AGENT.md  (+8 more)
apps/hub/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
apps/hub/frontend/: package-lock.json  package.json  tsconfig.base.json
apps/hub/src/acp/hub/: app.py  auth_service.py  bundle_archive.py  bundle_release.py  coordination_service.py  coordination_state.py  coordination_store.py  css_shared.py  dashboard_auth.py  downloads_html.py  event_store.py  http_api.py  hub_branding.py  idempotency.py  journal.py  landing_html.py  migrations.py  overlay_example.py  reject.py  routing_service.py  session_registry.py  sqlite_event_store.py  sqlite_support.py  trace.py  ws_ingress.py
apps/hub/src/acp/protocol/: errors.py  models.py  validators.py
apps/hub/src/acp_managed/: __init__.py  app.py  config.py  contracts.py  rate_limit.py  setup.py
apps/hub/src/acp_managed/auth/: __init__.py  passwords.py  session.py  sqlite_store.py  whitelist.py
apps/hub/src/acp_managed/routing/: __init__.py  _helpers.py  agent.py  auth.py  downloads.py  instance_admin.py  public_pages.py  workspace_admin.py
apps/hub/src/acp_managed/services/: __init__.py  access.py  invitations.py  single_workspace.py  tokens.py  workspace_sessions.py
(+67 files in other folders)
