[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-hub"
version = "0.3.0"
description = "ACP (Agent Communication Protocol) Hub: coordination layer for coding agents."
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "ACP"}]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "fastapi==0.115.12",
    "pydantic==2.11.7",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "websockets>=15,<16",
    "httpx>=0.27",
]
dev = [
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["acp*", "acp_managed*"]
namespaces = true

[tool.setuptools.package-data]
"acp.hub" = ["sql/migrations/*.sql"]
